tests/files/type_checker_tests/should_fail/109.cmdr
//Should fail pre-decrement on something of incorrect type
a = "hi";
--a;
